--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,62 +4,38 @@ on:
   workflow_dispatch:  # 支持手动触发
   push:
     tags:
-      - 'v*'          # 监听版本号标签
+      - 'v*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        goos: [freebsd]
-        goarch: [amd64]
-        include:
-          - goos: freebsd
-            goarch: amd64
-            suffix: "freebsd-amd64"
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: "1.20.14"
+          go-version: '1.20'
 
-      - name: Print Go version
-        run: go version
-
-      - name: Build binary
+      - name: Build for FreeBSD amd64
         env:
           CGO_ENABLED: 0
+          GOOS: freebsd
+          GOARCH: amd64
         run: |
-          VERSION=${GITHUB_REF##*/}  # 从 tag 获取版本
-          echo "Building for ${{ matrix.goos }} / ${{ matrix.goarch }}"
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} \
-            go build -ldflags "-s -w -X main.Version=$VERSION" \
-            -o dist/5-${{ matrix.suffix }} ./cmd/server
+          mkdir -p dist
+          VERSION=${GITHUB_REF##*/}  # 解析 tag 为版本号
+          go build -ldflags="-s -w -X main.Version=$VERSION" -o dist/5-freebsd-amd64 .
+          file dist/5-freebsd-amd64
+          ls -lh dist/
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: socks5-${{ matrix.suffix }}
-          path: dist/5-${{ matrix.suffix }}
-
-  release:
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-
-      - name: Publish release
+      - name: Upload to GitHub Release
         uses: softprops/action-gh-release@v1
         with:
-          files: |
-            dist/**/5-*
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          files: dist/5-freebsd-amd64
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
